--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="A web application that tests your browser's support of modern client-side storage tecniques and its privacy settings">
       <meta name="author" content="Stefano Belloro">
       <title>Storage Watcher</title>
