--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
       <div class="container">
         <h1>Storage Watcher</h1>
-        <p class="lead">A web application that tests your browser's support of modern client-side storage tecniques and its privacy settings
+        <p class="lead">A web application that tests your browser's support of modern client-side storage techniques and its privacy settings
         </p>
 
-        <p><b>Test 1 - API support:</b> Some browsers disable certain APIs when used in 'incognito' mode. Simply try to add an entry to the storage system by pressing 'Add Entry' and click on 'List all entries'.</p>
+        <p><b>Test 1 - API support:</b> Some browsers disable certain APIs when used in private browsing mode. Simply try to add an entry to the storage system by pressing 'Add Entry' and click on 'List all entries'.</p>
         <p><b>Test 2 - Data deletion:</b> After completing test 1, remove your personal data from your browser, then click on 'List all entries'. All storage should be empty, but if any entry is still there it means that your browser did not actually delete locally stored data.</p>
         <p>
           Run the tests on <br/>
