removes alter and prints message on the page instead

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <p>
         <button class="btn-me" id="readAll">List all entries</button>
         <button class="btn-me" id="addEntry">Add Entry</button>
-        </p>        
-        <p>Created by Stefano Belloro</p>
+        <button class="btn-me" id="clearLogs">Clear logs</button>
+
+        </p>
+        <h2>Message logs:</h2>
+        <div id="messageBox">
+        </div>        
       </div>
       <script src="src/webstorage.js"></script>
       <script src="src/indexeddb.js"></script>
